--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,10 @@
 	<url>http://maven.apache.org</url>
 
 	<properties>
-		<org.springframework.version>3.1.4.RELEASE</org.springframework.version>
-		<spring-security.version>3.1.4.RELEASE</spring-security.version>
+		<org.springframework.version>3.2.0.RELEASE</org.springframework.version>
+		<spring-security.version>3.2.0.RELEASE</spring-security.version>
+		<jstl.version>1.2</jstl.version>
+		<mysql.connector.version>5.1.30</mysql.connector.version>
 	</properties>
 
 	<dependencies>
@@ -24,9 +26,25 @@
 		<!-- Spring MVC depends on spring-core, spring-beans, spring-context, spring-web -->
 		<dependency>
 			<groupId>org.springframework</groupId>
+			<artifactId>spring-core</artifactId>
+			<version>${org.springframework.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+			<version>${org.springframework.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
 			<version>${org.springframework.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-jdbc</artifactId>
+			<version>${org.springframework.version}</version>
+		</dependency>
+
 		<!-- Spring Security Dependencies -->
 		<dependency>
 			<groupId>org.springframework.security</groupId>
@@ -42,6 +60,27 @@
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-config</artifactId>
 			<version>${spring-security.version}</version>
+		</dependency>
+
+		<!-- Spring Security JSP Taglib -->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-taglibs</artifactId>
+			<version>${spring-security.version}</version>
+		</dependency>
+
+		<!-- jstl for jsp page -->
+		<!-- <dependency>
+			<groupId>jstl</groupId>
+			<artifactId>jstl</artifactId>
+			<version>${jstl.version}</version>
+		</dependency> -->
+
+		<!-- connect to mysql -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>${mysql.connector.version}</version>
 		</dependency>
 
 	</dependencies>
