--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,7 +7,12 @@
     <servlet>
         <servlet-name>dispatcher</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+        <init-param>
+			<param-name>contextConfigLocation</param-name>
+			<param-value>/WEB-INF/spring/dispatcher-servlet.xml</param-value>
+		</init-param>
         <load-on-startup>1</load-on-startup>
+		<async-supported>true</async-supported>
     </servlet>
  
     <servlet-mapping>
@@ -19,8 +24,9 @@
     <context-param>
         <param-name>contextConfigLocation</param-name>
         <param-value>
-            /WEB-INF/dispatcher-servlet.xml,
-            /WEB-INF/spring-security.xml
+            /WEB-INF/spring/dispatcher-servlet.xml,
+            /WEB-INF/spring/spring-security.xml,
+            /WEB-INF/spring/spring-module.xml
         </param-value>
     </context-param>
      
