--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,12 @@
 			<version>3.8.1</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.itextpdf</groupId>
+			<artifactId>itextpdf</artifactId>
+			<version>5.0.6</version>
+		</dependency>
+
 
 		<!-- Spring MVC depends on spring-core, spring-beans, spring-context, spring-web -->
 		<dependency>
@@ -70,11 +76,8 @@
 		</dependency>
 
 		<!-- jstl for jsp page -->
-		<!-- <dependency>
-			<groupId>jstl</groupId>
-			<artifactId>jstl</artifactId>
-			<version>${jstl.version}</version>
-		</dependency> -->
+		<!-- <dependency> <groupId>jstl</groupId> <artifactId>jstl</artifactId> 
+			<version>${jstl.version}</version> </dependency> -->
 
 		<!-- connect to mysql -->
 		<dependency>
